@@ -5,6 +5,9 @@ HISTORY
 1.1rc5 (unreleased)
 -------------------
 
+- Added support for comment nodes in Generic Setup.
+  [robgietema]
+
 - Changed hard coded css imports in dialogs to the generated plone.css.
   [robgietema]
 
